# social-trend-agent

./: .env.example  .gitignore  .mcp.json  .yamllint.yml  ARCHITECTURE_ANALYSIS.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PORTFOLIO_REPORT.md  README.md  docker-compose.yaml  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-auth.txt  requirements.txt  run.sh
.claude/: CLAUDE.md  mcp-setup.md  settings.json  settings.local.json.example
.claude/agents/: api-agent.md  ci-agent.md  data-agent.md  docker-agent.md  perf-agent.md  planner.md  security-agent.md  test-agent.md  web-agent.md
.claude/commands/: api-agent.md  ci-agent.md  commit.md  data-agent.md  docker-agent.md  perf-agent.md  planner.md  security-agent.md  test-agent.md  web-agent.md
.claude/hooks/: format-code.sh  format_after_edit.sh  notify_slack.sh  pre-commit-check.sh
.claude/skills/init/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/security-review/: SKILL.md
.github/workflows/: ci.yml  claude.yml  docker.yml  lint.yml  test.yml
agents/api/: dashboard.py  n8n_routes.py
agents/news_trend_agent/: POW.md  README.md  __init__.py  __main__.py  graph.py  graph_advanced.py  prompts.py  tools.py
agents/news_trend_agent/prompts/: system.md
agents/news_trend_agent/tests/: test_tools.py
agents/shared/: __init__.py  ab_testing.py  cache.py  config_manager.py  distributed.py  error_handling.py  evaluation.py  logging.py  mcp_manager.py  monitoring.py  prompt_versioning.py  retry.py  state.py
agents/shared/examples/: integrated_agent_example.py
agents/shared/tests/: test_cache.py  test_error_handling.py  test_logging.py  test_retry.py
agents/viral_video_agent/: POW.md  README.md  __init__.py  __main__.py  graph.py  prompts.py  tools.py
agents/viral_video_agent/prompts/: system.md
agents/viral_video_agent/tests/: test_tools.py
apps/node/: README.md  package-lock.json  package.json  tsconfig.json
apps/node/src/: app.ts  config.ts  server.ts
apps/web/: .dockerignore  Dockerfile  README.md  cypress.config.ts  nginx.conf  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css
artifacts/news_trend_agent/: demo_20241019_sample.md  demo_20241019_sample_metrics.json
artifacts/viral_video_agent/: demo_20241019_viral_sample.md  demo_20241019_viral_sample_metrics.json
automation/mcp/: README.md  mcp_config.json  mcp_server.py
automation/n8n/: README.md  viral_spike_alert.json
automation/otel/: prometheus.yml
backend/extension_modules/langgraph_runtime/: events.py  executor.py  message_utils.py  parsing.py  sse.py
backend/extension_modules/mcp_runtime/: client.py
backend/extension_modules/pipes/: base.py  trend_agent.py
backend/extension_modules/tools/: base.py  trend_analysis.py
backend/extension_modules/utils/: message.py  model.py
config/: default.yaml  prometheus.yml
config/docker/: docker-compose.yaml
config/mcp/: README.md  claude_desktop_config.json  mcp_server.py
config/otel/: otel-collector-config.yaml
deploy/n8n/: README.md  news_daily_report.json
deploy/scripts/: run_agent.py
docs/: CLOUD_NEUTRAL_MIGRATION.md  DESIGN_DOC.md  IMPLEMENTATION_SUMMARY.md  PHASE3_SUMMARY.md  README.md  STRUCTURE_OVERVIEW.md  STRUCTURE_REFACTOR_AND_DOCKER_CHECKLIST.md  TESTING_GUIDE.md  agent_implementation_roadmap.md  agent_multistage_architecture.md  agent_pipeline_assessment.md  dashboard_ux_copy.md  domain_mission_creator.md  experiments.md
docs/domain/: prompts_mission_creator.md
docs/guides/: report_style_guide.md
examples/: v4_enterprise_example.py
playbooks/: QUICK_START.md
scripts/: migrate_src_artifacts.py  run_agent.py
src/: __init__.py  mcp.py  youtube_analyzer.py
src/agents/: __init__.py  orchestrator.py  stream_utils.py
src/agents/news_trend/: __init__.py  graph.py  (+3 more)
src/api/: README.md  __init__.py  streaming.py
src/core/: checkpoint.py  config.py  datetime_utils.py  errors.py  gateway.py  logging.py  plan.py  plan_graph.py  prompts.py  refine.py  routing.py  state.py  tool_execution.py  utils.py  workflow.py
src/domain/: mission.py  models.py  plan.py  schemas.py
src/infrastructure/: __init__.py  cache.py  distributed.py  metrics.py  rate_limiter.py  retry.py  session_manager.py  timeout.py
src/integrations/: __init__.py
tests/: test_domain_models.py
tests/integration/: test_api_server.py  test_news_agent_e2e.py  test_news_agent_integration.py  test_pipeline_components.py  test_social_trend_agent.py
tests/unit/: test_mcp_servers.py  test_monitoring.py  test_workflow.py
(+79 files in other folders)
